--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja"">
   <head>
     <meta charset="UTF-8" />
-    <title>fetch関数を利用したApollo Serverからのデータ取得</title>
+    <title>fetch関数を利用したApollo Serverとの通信</title>
   </head>
   <body>
     <div id="app"></div>
@@ -26,7 +26,7 @@
                    query:`query{
                     posts{
                       id
-                      title
+                     得 title
                     }
                    }`
                    */
